* #3291: Further improve activity participant tracking (smcv)
* Correctly pick up existing Salut connections (smcv)
* Don't crash if a buddy property is None (smcv)
* #3290: When a buddy goes offline, consider them to have left all their
  activities (smcv)

Snapshot 3ed091301b

* Improve tracking of who's in activities with us (smcv)
* Refactor joining/sharing so we don't claim to have succeeded,
  or try to SetProperties(), until we're actually in the chatroom
  (fixes regression with Salut darcs HEAD) (smcv)

Snapshot 3b1f4a0c42

* #3147: Set _PROP_CURACT to current activity when sharing an activity
  or joining (morgs)

Snapshot a79f7b6488

* Fix non-ASCII activity names (smcv)
* Notify local processes when we change an activity name, so the mesh
  view can update (smcv)
* Fix bug where activities initially had empty title in mesh view (smcv)

Snapshot 25218b4642

* Support invitations and non-public activities (smcv)
* Support mutable name/tags/color/private properties (smcv)

Snapshot 1c58a0be88

* Update LinkLocal plugin's protocol to "local-xmpp"

Snapshot 970ca27db7

* Make buddy-left async (morgs)

Snapshot 8dc589f5b0

* #2214: Gracefully handle blank server field (dcbw)

Snapshot fbc25c93ad

Snapshot bc7fc5f02d

* Cope with arbitrary Unicode in nicknames, bug#2611 (smcv)

Snapshot ce62f752b2

* Text channel creation minor fixes (smcv)
* #2062: Handle trying to register if the server says already registered
  (cassidy)

Snapshot 79251459e5

* Return buddy properties as a byte array, not an array of bytes (dcbw)
* Don't list the owner twice in GetBuddies method (danw)

Snapshot 650c323462

* Don't send None over D-Bus when updating current activity (danw)
* Make locally-originated shared activities disappear when everyone leaves (dcbw)

Snapshot 6c86d827b5

* Set Buddy current-activity property to none if leaving the current activity
* Hook up to owner current activity change signal so current activity changes
  get propagated